# weird-cua-bench

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml  run.py
.github/workflows/: deploy-pages.yml  tests.yml
benchmarks/: __init__.py
benchmarks/weird_captcha_gym/: README.md  __init__.py  benchmark_manifest.json
benchmarks/weird_captcha_gym/dashboard/: README.md  RESEARCH.md  __init__.py  atlas.py  behavior_reviews.py  capabilities.py  capability_annotations.py  catalog.py  export_static.py  reviews.py  server.py  session_worker.py
benchmarks/weird_captcha_gym/docs/: architecture-v0.md  benchmark-quality-gate-v0.md  capability-annotation-guidelines.md  environment-behavior-notes-v0.md  final-eleven-audit-v1.md  interaction-puzzle-field-notes.md  interaction-vii-viii-design-v0.md  interaction-vii-viii-difficulty-v2.md  mechanic-shortlist-v0.md  next-ten-audit-v1.md  next-ten-audit-v2.md  next-ten-difficulty-v3.md  pending-next-ten-audit-v2.md  pending-next-ten-audit-v3.md  reviewed-overhaul-v1.md  revived-pilots-v2.md  runner-integration-plan-v0.md  task-specs-v0.md
benchmarks/weird_captcha_gym/evidence/: reverse_identity_gate_avf_session.json
benchmarks/weird_captcha_gym/registry/: __init__.py  splits.py
benchmarks/weird_captcha_gym/shared_runtime/: verifier_helpers.py
benchmarks/weird_captcha_gym/shared_scripts/: export_result.sh  install_puzzle_runtime.sh  open_puzzle_browser.sh  setup_puzzle_runtime.sh  setup_task.py
benchmarks/weird_captcha_gym/splits/: blind_dice_courier_split.json  board_game_captcha_split.json  bomb_manual_from_hell_split.json  bureaucratic_signature_trap_split.json  clockwork_clutch_safe_split.json  clockwork_doppelganger_customs_split.json  (+70 more)
tests/: test_weird_captcha_benchmark.py  test_weird_captcha_dashboard.py
(+852 files in other folders)
