[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "weird-cua-bench"
version = "0.1.0"
description = "Interaction-first visual puzzle benchmark for computer-use agents."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Weird CUA Bench contributors"}]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.optional-dependencies]
runtime = [
  "gym-anything[use_computer] @ git+https://github.com/cmu-l3/gym-anything.git@94d4aecce0edb581af78a8a36f3e2d759ef41d09",
]
evaluation = [
  "gym-anything[agents,use_computer] @ git+https://github.com/cmu-l3/gym-anything.git@94d4aecce0edb581af78a8a36f3e2d759ef41d09",
]
test = [
  "pytest>=8.0",
  "gym-anything @ git+https://github.com/cmu-l3/gym-anything.git@94d4aecce0edb581af78a8a36f3e2d759ef41d09",
]

[project.urls]
Homepage = "https://gym-anything.github.io/weird-cua-bench/"
Repository = "https://github.com/gym-anything/weird-cua-bench"
Issues = "https://github.com/gym-anything/weird-cua-bench/issues"

[project.scripts]
weird-cua-dashboard = "benchmarks.weird_captcha_gym.dashboard.server:main"
weird-cua-export = "benchmarks.weird_captcha_gym.dashboard.export_static:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["benchmarks*"]
namespaces = true

[tool.setuptools.package-data]
"benchmarks.weird_captcha_gym" = ["**/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
